/*
 * $Id: ChangeLog,v 1.52 2002/01/27 09:01:53 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-01-27 02:31 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/transfrm.c
    ! Corrected few bugs.
  * source/vm/hvm.c
    ! Corrected support for Eval( @bBlock )

  /* HBTEST down to 155 "errors". */

2002-01-27 00:27 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rdd/dbcmd.c
  * source/rtl/oemansi.c
  * source/rtl/setkey.c
  * source/rtl/transfrm.c
  * source/vm/asort.c
  * source/vm/classes.c
  * source/vm/debug.c
  * source/vm/hvm.c
  * source/vm/memvars.c
  * source/vm/pvalue.c
    * Fixed wrong hb_itemReturn() calls to hb_itemCopy( &hb_stack.Return, ... )

  * include/hbapi.h
  * source/vm/arrays.c
  * source/vm/arrayshb.c
    * Optimized and corrected aFill()

2002-01-26 21:22 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/errorapi.c
  * source/vm/fastitem.c
  * source/vm/itemapi.c
    * Improved tracing calls.

  * source/vm/hvm.c
    * Modified HB_P_PUSHSTR* to support non terminated strings from modules compiled with Harbour.
    ! Fixed minor bug in HB_P_LOCALNEARADDINT

  * source/rtl/left.c
    ! Optimized Left() (if called by non xHarbour compiled module).

2002-01-26 13:06 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbdbf.h
  * include/hbdbsort.h
  * include/hboo.ch
  * include/hbrddcdx.h
  * source/vm/cmdarg.c
    * Added missing newline at end of file.

  * source/vm/arrays.c
    - Removed 1 unused var.

2002-01-26 12:12 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/errorsys.prg
    + Addd support for TraceLog()

  * include/hbexprb.c
    + Added optimization for int + x

  * source/vm/hvm.c
    ! Optimized hb_vmArrayGen()
    + Added HB_TRACE() to all PCODES  (except macros for now).

2002-01-25 21:55 UTC-0800 Ron Pinkas <ron@ronpinkas.com>