@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.52 2002/01/27 09:01:53 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.53 2002/01/27 10:34:16 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-01-27 02:56 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * include/hbapi.h
+  * source/vm/arrays.c
+  * source/rtl/left.c
+  * source/vm/arrayshb.c
+    * Corrected compiler's warnings
 
 2002-01-27 02:31 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/rtl/transfrm.c
